--- a/logging.html
+++ b/logging.html
@@ -7,7 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col items-center p-8">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-4xl">
+    <!-- 'relative' 클래스를 추가하여 버튼을 이 컨테이너 내부에 위치시킵니다 -->
+    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-4xl relative">
+
+        <!-- '처음으로 돌아가기' 버튼 추가 -->
+        <a href="/" class="absolute top-4 left-4 bg-gray-500 text-white font-semibold py-2 px-4 rounded-md shadow-md hover:bg-gray-600 transition duration-300 text-sm">
+            &larr; 처음으로
+        </a>
+
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">저장된 로그 목록</h1>
         <div class="overflow-x-auto">
             <table class="min-w-full bg-white border border-gray-200 rounded-lg">
